--- a/src/main/resources/recipes-ui/index.html
+++ b/src/main/resources/recipes-ui/index.html
@@ -1,65 +1,61 @@
 <html lang="en">
 <head>
-    <title>A Simple SPA For Recipes</title>
-    <script type="application/javascript">
-        function fetchAndDisplayRecipes() {
-            fetchRecipes()
-                .then(recipes => displayRecipes(recipes))
-        }
-
-        function fetchRecipes() {
-            return fetch(
-                "/recipes",
-                {
-                    headers: { 'Accept': 'application/json' }
-                }
-            ).then(resp => resp.json());
-        }
-
-        function displayRecipes(recipes) {
-            const recipesTableBody = document.getElementById("recipesTableBody")
-            recipes.forEach(recipe => {
-                const newRow = recipeRow(recipe);
-                recipesTableBody.appendChild(newRow);
-            });
-        }
-
-        function recipeRow(recipe) {
-            return tr([
-                td(recipe.title),
-                td(recipe.description),
-                td(recipe.label)
-            ]);
-        }
-
-        function tr(children) {
-            const node = document.createElement("tr");
-            children.forEach(child => node.appendChild(child));
-            return node;
-        }
-
-        function td(text) {
-            const node = document.createElement("td");
-            node.appendChild(document.createTextNode(text));
-            return node;
-        }
-    </script>
+    <title>Recipe Manager Web Application</title>
 </head>
 <body>
-<h1>Viewing Recipes Via JS</h1>
-<form action="javascript:fetchAndDisplayRecipes()">
-    <input type="submit" value="View The Recipes">
-</form>
-<table>
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Priority</th>
-    </tr>
-    </thead>
-    <tbody id="recipesTableBody">
-    </tbody>
-</table>
+<h1>Recipe Manager Web Application</h1>
+<div>
+    <h3><a href="/templated/recipes">View all the recipes</a></h3>
+</div>
+<div>
+    <h3>View recipes by label</h3>
+    <form method="get" action="/recipes/byLabel">
+        <select name="label">
+            <option name="LowCarb">LowCarb</option>
+            <option name="Mediterranean">Mediterranean</option>
+            <option name="Vegetarian">Vegetarian</option>
+            <option name="Pescatarian">Pescatarian</option>
+        </select>
+        <input type="submit">
+    </form>
+</div>
+<div>
+    <h3>View a recipe by recipe id</h3>
+    <form method="get" action="/recipes/byId">
+        <input type="text" name="recipeId" width="20">
+        <input type="submit">
+    </form>
+</div>
+<div>
+    <h3>View a recipe by name</h3>
+    <form method="get" action="/recipes/byName">
+        <input type="text" name="title" width="20">
+        <input type="submit">
+    </form>
+</div>
+<div>
+    <h3>Create or edit a recipe</h3>
+    <form method="post" action="/recipes">
+        <div>
+            <label for="title">Recipe Title: </label>
+            <input type="text" id="title" name="title" size="20">
+        </div>
+        <div>
+            <label for="description">Description: </label>
+            <input type="text" id="description"
+                   name="description" size="40">
+        </div>
+        <div>
+            <label for="label">Label: </label>
+            <select id="label" name="label">
+                <option name="LowCarb">LowCarb</option>
+                <option name="Mediterranean">Mediterranean</option>
+                <option name="Vegetarian">Vegetarian</option>
+                <option name="Pescatarian">Pescatarian</option>
+            </select>
+        </div>
+        <input type="submit">
+    </form>
+</div>
 </body>
 </html>
