Refactor proyect structure

--- a/src/main/resources/recipes-ui/index.html
+++ b/src/main/resources/recipes-ui/index.html
@@ -5,11 +5,11 @@
 <body>
 <h1>Recipe Manager Web Application</h1>
 <div>
-    <h3><a href="/templated/recipes">View all the recipes</a></h3>
+    <h3><a href="/recipes">View all the recipes</a></h3>
 </div>
 <div>
     <h3>View recipes by label</h3>
-    <form method="get" action="/templated/recipes/byLabel">
+    <form method="get" action="/recipes/byLabel">
         <select name="label">
             <option name="LowCarb">LowCarb</option>
             <option name="Mediterranean">Mediterranean</option>
@@ -21,21 +21,21 @@
 </div>
 <div>
     <h3>View a recipe by recipe id</h3>
-    <form method="get" action="/templated/recipes/byId">
+    <form method="get" action="/recipes/byId">
         <input type="text" name="recipeId" width="20">
         <input type="submit">
     </form>
 </div>
 <div>
     <h3>View a recipe by name</h3>
-    <form method="get" action="/templated/recipes/byName">
+    <form method="get" action="/recipes/byName">
         <input type="text" name="title" width="20">
         <input type="submit">
     </form>
 </div>
 <div>
     <h3>Create or edit a recipe</h3>
-    <form method="post" action="/templated/recipes">
+    <form method="post" action="/recipes">
         <div>
             <label for="title">Recipe Title: </label>
             <input type="text" id="title" name="title" size="20">
