--- a/src/main/resources/recipes-ui/recipe-form.html
+++ b/src/main/resources/recipes-ui/recipe-form.html
@@ -16,6 +16,18 @@
         <input type="text" id="description" name="description" size="20">
     </div>
     <div>
+        <label for="preparationTimeMinutes">Prep Time: </label>
+        <input type="text" id="preparationTimeMinutes" name="preparationTimeMinutes" size="3">
+    </div>
+    <div>
+        <label for="imageUrl">Image URL: </label>
+        <input type="text" id="imageUrl" name="imageUrl" size="250">
+    </div>
+    <div>
+        <label for="recipeUrl">Recipe URL: </label>
+        <input type="text" id="recipeUrl" name="recipeUrl" size="250">
+    </div>
+    <div>
         <label for="label">Label: </label>
         <select id="label" name="label">
             <option name="LowCarb">LowCarb</option>
