--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 
-<img src="img/Chef_AI_Icon.jpeg" alt="Chef AI Logo">
+<img alt="Chef AI Logo" src="img/Chef_AI_Icon.jpeg">
 <h1>Coming Soon!</h1>
 
 </body>
